feat: add custom cursor

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -12,5 +12,8 @@
 			<h1>Enable JavaScript to run this app.</h1>
 		</noscript>
 		<canvas id="webgl"></canvas>
+		<div class="cursor-container">
+			<img draggable="false" src="cursor.svg" alt="cursor" class="cursor" />
+		</div>
 	</body>
 </html>
