feat: add paper text

--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,9 @@
 		<div class="cursor-container">
 			<img draggable="false" src="cursor.svg" alt="cursor" class="cursor" />
 		</div>
+		<div class="paper">
+			<div class="content">agrou grou message</div>
+			<div class="author">Le loup</div>
+		</div>
 	</body>
 </html>
