--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
 			<h1>Enable JavaScript to run this app.</h1>
 		</noscript>
 		<canvas id="webgl"></canvas>
+		<canvas id="music_button"></canvas>
+		<canvas id="button"></canvas>
+		<div class="loader-container">
+			<canvas id="loader"></canvas>
+		</div>
 		<div class="cursor-container">
 			<img draggable="false" src="cursor.svg" alt="cursor" class="cursor" />
 		</div>
