feat: title sequence

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,13 @@
 		<noscript>
 			<h1>Enable JavaScript to run this app.</h1>
 		</noscript>
+		<div class="big-title">
+			<p>HEREEEE IT IS</p>
+			<p>RIGHT NOOOW</p>
+			<p class="santa">SANTA BOOOOOOOOOOOBLE</p>
+			<p>PUSH IT...</p>
+			<p>COME ON</p>
+		</div>
 		<canvas id="webgl"></canvas>
 		<canvas id="music_button"></canvas>
 		<canvas id="button"></canvas>
