feat: add permission button and gimbal functionality

--- a/src/index.html
+++ b/src/index.html
@@ -56,5 +56,8 @@
 			<div class="content">agrou grou message</div>
 			<div class="author">Le loup</div>
 		</div>
+		<div class="permission-container">
+			<button class="permission">permission button</button>
+		</div>
 	</body>
 </html>
