feat: share functionality

--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,8 @@
 			</svg>
 		</div>
 		<div class="paper">
-			<div class="content">agrou grou message</div>
-			<div class="author">Le loup</div>
+			<div class="content">Happy Holidays!</div>
+			<div class="author">Santa</div>
 		</div>
 		<div class="permission-container">
 			<button class="permission">permission button</button>
