feat: add word-wrapper dependency and implement text input features in canvas

--- a/src/index.html
+++ b/src/index.html
@@ -131,9 +131,10 @@
 				/>
 			</svg>
 		</div>
-		<div class="paper">
-			<div class="content">Happy Holidays!</div>
-			<div class="author">Santa</div>
+		<div class="paper-canvas">
+			<textarea maxlength="150"></textarea>
+			<input type="text" maxlength="50" />
+			<canvas id="paper"></canvas>
 		</div>
 		<div class="permission-container">
 			<button class="permission">permission button</button>
