--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 <noscript>
 	<h1>Enable JavaScript to run this app.</h1>
 </noscript>
+<h1>Crushboom</h1>
 <div class="big-title">
 	<p>HEREEEE IT IS</p>
 	<p>RIGHT NOOOW</p>
