final gl functionnality

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,14 @@
 </div>
 <canvas id="webgl"></canvas>
 <canvas id="music_button"></canvas>
-<canvas id="button"></canvas>
+<div class="buttons-container">
+	<button class="secondary-button">
+		Write a message to your Crush
+	</button>
+	<button class="primary-button">
+		Someone is looking for you, open it
+	</button>
+</div>
 <div class="loader-container">
 	<div class="loader-wrapper">
 		<img src="./star.svg" alt="star" class="star1" />
@@ -115,7 +122,7 @@
 	</svg>
 </div>
 <div class="paper-canvas">
-	<textarea maxlength="150"></textarea>
+	<textarea maxlength="300"></textarea>
 	<input type="text" maxlength="50" />
 	<canvas id="paper"></canvas>
 </div>
