--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,17 @@
 </noscript>
 <h1>Crushboom</h1>
 <div class="big-title">
-	<p>HEREEEE IT IS</p>
-	<p>RIGHT NOOOW</p>
-	<p class="santa">SANTA BOOOOOOOOOOOBLE</p>
-	<p>PUSH IT...</p>
-	<p>COME ON</p>
+	<div class="titles">
+		<p class="title">Here is it...</p>
+		<p class="title">The time has come to express your feelings.</p>
+		<p class="title">Express right now your feelings to your beloved.</p>
+	</div>
+	<div class="status">
+		<img src="/star.svg" alt="heart" />
+		<img src="/star.svg" alt="heart" />
+		<img src="/star.svg" alt="heart" />
+	</div>
+
 </div>
 <canvas id="webgl"></canvas>
 <canvas id="music_button"></canvas>
@@ -128,6 +134,14 @@
 </div>
 <div class="permission-container">
 	<button class="permission">permission button</button>
+</div>
+
+<div class="finish">
+	<div class="center">
+		<h2>Bravo, brave soul! </h2>
+		<p>Your message is sealed and your link is copied. <br> Now, it's Cupid's turn!</p>
+	</div>
+	<p class="credits">Crafted with love by <a href="https://x.com/aurelien_desert" target="_blank">Aurélien Desert</a> & <a href="https://bento.me/flan" target="_blank">Clément Renou</a></p>
 </div>
 </body>
 </html>
